[package]
name = "receipt_repository_fe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
